Add repository guidelines and adjust documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 gg.jte.developmentMode=true
 
-openai.api-key=${OPENAI_API_KEY}
+openai.api-key=${OPENAI_API_KEY:}
 
 logging.level.ch.so.agi.gretl=DEBUG
 #logging.level.org.springframework=DEBUG
