Implement hybrid GRETL task finder

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ openai.api-key=${OPENAI_API_KEY:}
 
 logging.level.ch.so.agi.gretl=DEBUG
 #logging.level.org.springframework=DEBUG
+
+spring.datasource.url=${GRETL_RAG_JDBC_URL:jdbc:postgresql://localhost:54323/gretl_rag}
+spring.datasource.username=${GRETL_RAG_JDBC_USERNAME:gretl}
+spring.datasource.password=${GRETL_RAG_JDBC_PASSWORD:gretl}
+spring.datasource.hikari.maximum-pool-size=${GRETL_RAG_HIKARI_MAX:5}
