--- a/build.gradle
+++ b/build.gradle
@@ -21,14 +21,16 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'dev.langchain4j:langchain4j:1.8.0'
     implementation 'dev.langchain4j:langchain4j-open-ai:1.8.0'
     implementation 'gg.jte:jte-spring-boot-starter-3:3.2.1'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
-    
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    implementation 'org.postgresql:postgresql'
 }
 
 tasks.named('test') {
